create sign in, sign up and forgot password pages and all of components

--- a/src/index.css
+++ b/src/index.css
@@ -2,3 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 /* apply the basic tailwind styling */
+
+body {
+  background-color: rgb(240, 253, 244);
+}
